--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,12 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/bottom_action_home"
         android:icon="@drawable/baseline_home_black_24dp"
         android:title="@string/bottom_home_text" />
     <item
+        android:id="@+id/bottom_action_notif"
         android:icon="@drawable/baseline_notifications_black_24dp"
         android:title="@string/bottom_notification_text" />
     <item
+        android:id="@+id/bottom_action_account"
         android:icon="@drawable/baseline_person_black_24dp"
         android:title="@string/bottom_ac_text" />
 </menu>
