--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,7 +5,7 @@
 
     <item
         android:id="@+id/action_search_btn"
-        android:icon="@mipmap/action_search"
+        android:icon="@drawable/baseline_search_white_24dp"
         android:title="@string/action_search_text"
         app:showAsAction="always" />
     <item
