--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="115dp"
         android:layout_marginRight="115dp"
-        android:background="@drawable/profile_image"
+        android:background="@drawable/profile_image2"
         android:scaleType="centerCrop"
         app:civ_border_color="#000000"
         app:civ_border_width="5dp"
