--- a/app/src/main/res/layout/blog_list_item.xml
+++ b/app/src/main/res/layout/blog_list_item.xml
@@ -32,7 +32,7 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/profile_image" />
+                android:src="@drawable/profile_image2" />
 
             <TextView
                 android:id="@+id/blog_user_name"
@@ -59,10 +59,10 @@
             <ImageView
                 android:id="@+id/blog_image"
                 android:layout_width="0dp"
-                android:layout_height="220dp"
+                android:layout_height="200dp"
                 android:layout_marginTop="16dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/dummy_image"
+                android:src="@drawable/dummy_image2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/blog_user_image" />
